# server-capstone-api

./: .gitignore  README.md  manage.py  mvpERD.dbml  pyproject.toml
models/: model.py
thelineup/: settings.py  urls.py  wsgi.py
thelineup_api/: apps.py  validators.py
thelineup_api/fixtures/: gig_slots.json  gigs.json  instruments.json  invites.json  setlist_songs.json  setlists.json  songs.json  user_profiles.json  users.json
thelineup_api/models/: __init__.py  gig.py  gig_slot.py  instrument.py  invite.py  setlist.py  song.py  user_profile.py
thelineup_api/views/: __init__.py  auth.py  gig.py  gig_slot.py  instrument.py  invite.py  register.py  setlist.py  song.py  user_profile.py
